[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ShareTechMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/scripts/App.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/55_Ice_Cavern.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/theme_smaller.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="App" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 256.0
color = Color( 0.121569, 0.141176, 0.176471, 1 )

[node name="MainMenu" type="Control" parent="."]
margin_right = 320.0
margin_bottom = 256.0

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
margin_right = 320.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
margin_left = 62.0
margin_top = 69.0
margin_right = 257.0
margin_bottom = 187.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_right = 195.0
margin_bottom = 28.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Collapsing Cave"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_left = 60.0
margin_top = 60.0
margin_right = 135.0
margin_bottom = 118.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 8
alignment = 1

[node name="Button" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 13.0
margin_right = 61.0
margin_bottom = 25.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Play"

[node name="Button2" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 75.0
margin_bottom = 58.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Credits"

[node name="Credits" type="Control" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 256.0

[node name="Button3" type="Button" parent="Credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -45.0
margin_right = 34.0
margin_bottom = -20.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Return"

[node name="ScrollContainer" type="ScrollContainer" parent="Credits"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 170.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Label" type="Label" parent="Credits/ScrollContainer"]
margin_right = 250.0
margin_bottom = 452.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Collapsing Cave

Created by Patrick Gelvin


This game uses Godot Engine, available under the MIT license, which can be found here:
https://godotengine.org/license


Portions of this software are copyright Â© 1996-2022 The FreeType Project (www.freetype.org). All rights reserved.


Godot includes the mbed TLS library, licensed as following:

Copyright The Mbed TLS Contributors

Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.


Background ambiance is \"Ice Cavern\" from tabletopaudio.com, provided via a CC BY-NC-ND 4.0 license, which can be found here: https://creativecommons.org/licenses/by-nc-nd/4.0/"
autowrap = true

[node name="GameOver" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 320.0
margin_bottom = 256.0

[node name="ColorRect" type="ColorRect" parent="GameOver"]
margin_right = 320.0
margin_bottom = 256.0
color = Color( 0, 0, 0, 0.815686 )

[node name="MarginContainer" type="MarginContainer" parent="GameOver"]
margin_right = 320.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/MarginContainer"]
margin_right = 320.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="GameOver/MarginContainer/VBoxContainer"]
margin_left = 95.0
margin_top = 60.0
margin_right = 225.0
margin_bottom = 88.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Game Over!"

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 320.0
margin_bottom = 150.0
theme = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="GameOver/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 115.0
margin_right = 205.0
margin_bottom = 19.0
size_flags_horizontal = 4
text = "Score: XXX"

[node name="HighScoreLabel" type="Label" parent="GameOver/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 92.0
margin_top = 23.0
margin_right = 227.0
margin_bottom = 42.0
size_flags_horizontal = 4
text = "High Score: XXX"

[node name="Button" type="Button" parent="GameOver/MarginContainer/VBoxContainer"]
margin_left = 109.0
margin_top = 170.0
margin_right = 211.0
margin_bottom = 195.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Play Again"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Credits/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/Button" to="." method="_on_Play_Again_Button_pressed"]
